# salaah-mcp

./: .gitignore  Dockerfile  README.md  claude_desktop_config.json  fly.toml  main.py  pyproject.toml  run.py
app/: main.py
app/models/: celestial_response.py  location_request.py  moon_visibility_request.py  prayer_request.py  prayer_response.py  qiblah_response.py
app/tools/: praytimes.py
deploy/: build.sh  deploy.sh  samconfig.toml  template.yaml
src/: app.py
