[project]
name = "salaah-mcp"
version = "0.1.0"
description = "Muslim Community Prayer Times Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "islamic-times>=1.1.4",
    "pydantic>=2.5.3",
    "fastapi-mcp>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
